<resources>
    <string name="app_name">Exam grade calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mark_string">Mark</string>
    <string name="out_of_string">Out of…</string>
    <string name="weight_string">Weight (%)</string>
    <string name="calculate_string">Calculate!</string>
    <string name="final_grade_string">Final grade</string>
    <string name="zero_string">0</string>

</resources>
